fixed page gap

--- a/style.css
+++ b/style.css
@@ -331,10 +331,6 @@ code {
 /*------------------------------------------------------------------------
 # Posts
 ------------------------------------------------------------------------*/
-.post,
-.page {
-	padding-bottom: 25px;
-}
 .panel-footer {
 	padding: 0px 15px 25px;
 	border-top: none;
